fix checbox, align error message

--- a/design/css/scss/components/common.scss
+++ b/design/css/scss/components/common.scss
@@ -137,7 +137,7 @@ $gradient:linear-gradient(-135deg, #17EAD9 0%, #6078EA 100%);
     height: 40px; 
 }
 .k-icon-lock-white{
-   background-position: -126px -473px;
+   background-position: -129px -463px;
     width: 40px;
     height: 40px;
 }
@@ -294,7 +294,7 @@ $gradient:linear-gradient(-135deg, #17EAD9 0%, #6078EA 100%);
     height: 30px;
 }
 .k-icon-back{
-    background-position: -321px -408px;
+    background-position:-332px -404px;
     width: 30px;
     height: 30px;
 }
